# memoire-agent-V1

./: .gitignore  .mcp_history  LOGGING.md  OLLAMA.md  README.md  check_db.py  check_ollama.bat  check_ollama.sh  docker-compose.yml  memoire_copy.db  pyproject.toml  pytest.ini  test.txt
backend/: Dockerfile  backup_manager.py  deepseek_orchestrator.py  diagnose_ollama.py  export_manager.py  fix_dependencies.txt  fix_query2.py  hallucination_detector.py  llm_orchestrator.py  main.py  main.py.bak  pdf-extraction.py  requirements.txt  test_ollama.py
backend/api/: dependencies.py  hallucination.py
backend/core/: config.py  dummy_vectordb.py  exceptions.py  logging.py  logging_config.py  memory_manager.py
backend/data/: memoire.db
backend/db/: __ini__.py  database.py
backend/examples/: ollama_logger_example.py
backend/scripts/: init.sh  run_tests.sh  wait-for-it.sh
backend/services/: __init__.py  export_service.py  llm_service.py  memory_manager.py
backend/tests/: conftest.py  setup.py  test_text_analysis.py
backend/utils/: __init__.py  circuit_breaker.py  dummy_vectordb.py  pdf_extractor.py  text_analysis.py  text_processing.py
backups/session_20250331_133316/: changes_log.json
contexts/: session_1743186766.json  session_1743189011.json
deepseek_api_doc/: Deepseek API Documentation.txt  Deepseek Chat Prefix Completion.txt  Deepseek Context Caching.txt  Deepseek FIM Completion (Beta).txt  Deepseek Function Calling.txt  Deepseek Multi-round Conversation.txt  Deepseek Reasoning Model.txt
frontend/: Dockerfile  app.py  requirements.txt
(+31 files in other folders)
