[project]
name = "memoire-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (==1.26.0)",
    "requests (==2.31.0)",
    "pandas (==2.1.0)",
    "websocket-client (==1.6.3)",
    "matplotlib (==3.7.2)",
    "pillow (<10)",
    "plotly (==5.16.1)",
    "pdf2image (==1.16.3)",
    "python-docx (==0.8.11)",
    "docx2pdf (==0.1.8)",
    "streamlit-chat (==0.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
